feature/diffeq: start part

--- a/MathNotes.tex
+++ b/MathNotes.tex
@@ -52,6 +52,7 @@
     \import{txt}{BasicAlgebra.tex}
     \import{txt}{MeasureCalculus.tex}
     \import{txt}{TopologicalVectorSpaces.tex}
+    \import{txt}{DifferentialEquations.tex}
     
     \printindex
     \printnomenclature
