feature/diffeq: add part body

--- a/txt/DifferentialEquations.tex
+++ b/txt/DifferentialEquations.tex
@@ -1,2 +1,18 @@
 \setpart{Differential Equations}
 \label{part:diffeq}
+
+This part is devoted to the study of differential equations.
+Since the birth of calculus,
+it was proven useful as way to look at the derivative of the function
+in order to study functions.
+
+Nowadays, differential equations became a standard
+to describe many phenomena in nature
+whose behavior is determined by its current state.
+However, people discovered that most are hard to solve analytically,
+let alone the fact that some of them do not even have solutions.
+
+In this part,
+we observe the existence and uniqueness of solutions
+for some important classes of equations.
+Some methods for finding solutions are also discussed.
