feat/diffeq/opde: start chapter opde

--- a/txt/DifferentialEquations.tex
+++ b/txt/DifferentialEquations.tex
@@ -16,3 +16,5 @@ In this part,
 we observe the existence and uniqueness of solutions
 for some important classes of equations.
 Some methods for finding solutions are also discussed.
+
+\subimport{DifferentialEquations/}{OrdinaryPartialDE.tex}
