feat/diffeq/opde: start section heat eq

--- a/txt/DifferentialEquations/OrdinaryPartialDE.tex
+++ b/txt/DifferentialEquations/OrdinaryPartialDE.tex
@@ -1,2 +1,21 @@
 \setchapter{Ordinary and Partial Differential Equations}
 \label{chap:opde}
+
+In this chapter,
+we study examples of ordinary and partial differential equations.
+Ordinary differential equations can be thought as
+equations describing motion throughout time under specific conditions.
+It can be proved from the Picard-Lindel\"of theorem that
+such ordinary differential equations always have local solutions.
+
+On the other hand,
+partial differential equations typically describe states of medium,
+whose rate of change is subject not only to time,
+but also to the current state itself.
+These equations rely heavily on geometric properties,
+and are much more harder to solve analytically.
+
+We study the heat and wave equations as
+our typical examples of partial differential equations.
+
+\subimport{OrdinaryPartialDE/}{HeatDE.tex}
