--- a/MathNotes.tex
+++ b/MathNotes.tex
@@ -1,7 +1,7 @@
 \documentclass[
     oneside
     % image
-]{styles/mori-book}% styles/mori-report in real usage
+]{mori-book}
 
 \usepackage[
     % showframe,
@@ -16,11 +16,15 @@
 \usepackage{booktabs}
 \renewcommand{\baselinestretch}{1.15}
 
+% color theorems;
+% load before tikz to avoid option clash
+\usepackage[svgnames]{xcolor}
+
 \usepackage{tikz}
 \usetikzlibrary{cd, positioning}
 
-\usepackage{notation/mori-math}
-\usepackage{notation/mori-ref}
+\usepackage{mori-math}
+\usepackage{mori-ref}
 
 \input{thmstyles.tex}
 \input{notation.tex}
